# basic_django_react_login_SAFE

./: README.md
backend/: README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/base/: apps.py  serializers.py  signals.py
backend/base/auth_api/: urls.py  views.py
backend/base/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Header.css  Header.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: DashboardPage.js  HomePage.js  LoginPage.js
